the Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_03.md
+++ b/Instructions/20533D_LAB_AK_03.md
@@ -15,7 +15,7 @@
 
   -  Name: **20533D03labVM1**
 
-  -  VM disk type: **HDD**
+  -  VM disk type: **SSD**
 
   -  User name: **Student**
 
@@ -25,19 +25,19 @@
 
 5. In the Resource group section, click **Create new** and, in the text box below, type **20533D0301-LabRG**. 
 
-6. In the Location drop-down list, select an Azure region close to the location of the lab environment and click **OK**.
+6. In the Location drop-down list, select an Azure region close to the location of the lab environment, in which you can provision Azure VMs and click **OK**.
 
-7. On the Choose a size blade, click **D1_V2 Standard**, and then click **Select**.
+7. On the Choose a size blade, select any of available sizes with one or two vCPUs, and then click **Select**.
 
 8. On the Settings blade, ensure that **Use managed disk** is set to **Yes**.
 
-9. On the Settings blade, click **Availability set** and, on the Change availability set blade, click **Create new**.
+9. On the Settings blade, leave the **Availability zone** drop-down list with its default entry of **None**, then click **Availability set** and, on the Change availability set blade, click **Create new**.
 
 10. On the Create new blade, specify the following settings and click **OK**:
 
   -  Name: **20533D0301-db-avset**
 
-  -  Fault domains: **3**
+  -  Fault domains: **2**
 
   -  Update domains: **5**
 
@@ -45,7 +45,7 @@
 
 11. Back on the Settings blade, click **Virtual network**
 
-12. On the Create virtual network blade, specify the following settings and click **OK**.
+12. On the Choose virtual network blade, click **Create new**. Next, on the Create virtual network blade, specify the following settings and click **OK**.
 
   -  Name: **20533D0301-labVNet**
 
@@ -55,7 +55,7 @@
 
   -  Subnet address range: **10.0.0.0/24**
 
-13. Accept the default settings for the **Public IP address**, **Network security group (firewall)**, **Extensions**, **Auto-shutdown**, and **Monitoring** configuration.
+13. Accept the default settings for the **Public IP address**, **Network security group (firewall)**, **Extensions**, **Auto-shutdown**, **Monitoring**, **Managed service identity**, and **Backup** configuration.
 
 14. On the Settings blade, click **OK**
 
@@ -68,19 +68,21 @@
 
 #### Task 2: Use Azure PowerShell to create a virtual machine
   
-1. On MIA-CL1, right-click the Windows PowerShell icon and then click **Run ISE as Administrator**. When prompted by User Account Control for confirmation, click **Yes**.
+1. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows PowerShell** folder, right-click **Windows PowerShell ISE**, click **More**, and then click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. In the Windows PowerShell Integrated Scripting Environment (ISE) window, open the **New-20533D03labVM2.ps1** script located in E:\\Labfiles\\Lab03\\Starter\\
 
-3. In the Windows PowerShell ISE window, review the content of the script.
+3. In the Windows PowerShell ISE window, review the content of the script. 
 
-4. In the Windows PowerShell ISE window, click the **Run Script** icon or press F5.
+4. In the Windows PowerShell ISE window, replace the value of the **$vmSize** variable with the VM size you used to deploy an Azure VM in the previous task and save the change.
 
-5. When prompted, sign in using the Microsoft account that is the Service Administrator of your Azure subscription.
+5. In the Windows PowerShell ISE window, click the **Run Script** icon or press F5. 
 
-6. If you have multiple subscriptions, select the one you used when running **Add-20533DEnvironment** at the beginning of this module.
+6. When prompted, sign in using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-7. When the script is complete, leave the Windows PowerShell ISE window open.
+7. If you have multiple subscriptions, select the one you used when running **Add-20533DEnvironment** at the beginning of this module.
+
+8. When the script is complete, leave the Windows PowerShell ISE window open.
 
 > **Result**: After completing this exercise, you have created virtual machines by using the Azure portal and Azure PowerShell.
 
@@ -132,7 +134,7 @@
   
 #### Task 1: Use Visual Studio to deploy Linux app servers Azure VMs
   
-1. On MIA-CL1, on the taskbar, click the **Visual Studio** icon. If prompted with the message that the evaluation period has ended, click the **Sign in** and provide your Microsoft account credentials. Then, on the **Host your next project in Visual Studio Team Services** page, click the **Not now, maybe later** link. Next, click **Close**. 
+1. On MIA-CL1, click **Start** and, in the Start menu, click **Visual Studio 2017**. If prompted with the message that the evaluation period has ended, click the **Sign in** and provide the Microsoft account that is the Service Administrator of your Azure subscription. Next, click **Close**. 
 
 2. In Visual Studio, click **File**, click **Open**, click **Project/Solution**, and then browse to **E:\\Labfiles\\Lab03\\Starter\\Projects\\ResDevLinuxDeploy**.
 
@@ -144,7 +146,7 @@
 
 6. In the Solution Explorer pane, right-click **ResDevLinuxDeploy**, click **Deploy**, and then click **New**.
 
-7. In the Deploy to Resource Group window, click **Add an account**. When prompted, sign in with an account that is the Service Administrator of your Azure subscription.
+7. In the Deploy to Resource Group window, ensure that the target subscription appears in the **Subscription** drop-down list. 
 
 8. In the Deploy to Resource Group window, click the **Resource Group** drop-down box, and then click **20533D0301-LabRG**.
 
@@ -166,9 +168,9 @@
 
   - subnetPrefix: **10.0.1.0/24**
 
-  - vmSize: **Standard_D1_V2**
+  - vmSize: set the value to the same Azure VM size you used when you provisioned an Azure VM from the Azure portal
 
-  - ubuntuOSVersion: specify **16.04.0-LTS** or a more recent version if available
+  - ubuntuOSVersion: specify **18.04-LTS** or a more recent version if available
 
   - storageAccountType: **Standard_LRS**
 
@@ -371,7 +373,7 @@
 
 8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-9. In the Azure portal, click **Edit dashboard**.
+9. In the Azure portal, on Dashboard, click **Edit**.
 
 10. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
