--- a/Instructions/20533D_LAB_03.md
+++ b/Instructions/20533D_LAB_03.md
@@ -60,9 +60,9 @@ The main tasks for this exercise are as follows:
 
   -  Resource group: create a new resource group named **20533D0301-LabRG**. 
 
-  -  Location: an Azure region close to the location of the lab environment.
+  -  Location: an Azure region close to the location of the lab environment, in which you can provision Azure VMs
 
-  -  Size: **Standard_D1_v2**
+  -  Size: any available size with one or two vCPUs
 
   -  Use managed disks: **Yes**
 
@@ -70,7 +70,7 @@ The main tasks for this exercise are as follows:
 
   -  Virtual network: **20533D0301-labVNet** with address space **10.0.0.0/20** and a subnet named **database** with the address range **10.0.0.0/24**
 
-  -  Accept the default settings for the **Public IP address**, **Network security group (firewall)**, **Extensions**, **Auto-shutdown**, and **Monitoring** configuration.
+  -  Accept the default settings for the **Public IP address**, **Network security group (firewall)**, **Extensions**, **Auto-shutdown**, **Monitoring**, **Managed service identity**, and **Backup** configuration.
 
 4. Wait for the deployment to complete successfully.
 
@@ -81,15 +81,17 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, open a Windows PowerShell ISE window as Administrator
 
-2. In the Windows PowerShell ISE, open the script **E:\\Labfiles\\Lab03\\Starter\\New-20533D03labVM2.ps1** and review its content.
+2. In the Windows PowerShell ISE, open the script **E:\\Labfiles\\Lab03\\Starter\\New-20533D03labVM2.ps1** and review its content. 
 
-3. Run the script. 
+3. Replace the value of the **$vmSize** variable with the VM size you used to deploy an Azure VM in the previous task and save the change.
 
-4. When prompted, sign in using the Microsoft account that is the Service Administrator of your Azure subscription.
+4. Run the script. 
 
-5. If you have multiple subscriptions, select the one you used when running **Add-20533DEnvironment** at the beginning of this module.
+5. When prompted, sign in using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-6. When the script is complete, leave the Windows PowerShell ISE window open.
+6. If you have multiple subscriptions, select the one you used when running **Add-20533DEnvironment** at the beginning of this module.
+
+7. When the script is complete, leave the Windows PowerShell ISE window open.
 
 
 > **Result**: After completing this exercise, you have created virtual machines by using the Azure portal and Azure PowerShell.
@@ -190,7 +192,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Use Visual Studio to deploy Linux app servers Azure VMs
   
-1. On MIA-CL1, start Visual Studio. If prompted, sign in with your Microsoft account credentials. If prompted to create configure Visual Studio Team Services account, click **Not now, maybe later**.
+1. On MIA-CL1, start Visual Studio 2017. If prompted, sign in with the Microsoft account that is the Service Administrator of your Azure subscription. 
 
 2. In Visual Studio, open the solution **ResDevLinuxDeploy.sln** from E:\\Labfiles\\Lab03\\Starter\\Projects\\ResDevLinuxDeploy. 
 
@@ -212,9 +214,9 @@ The main tasks for this exercise are as follows:
 
   - subnetPrefix: **10.0.1.0/24**
 
-  - vmSize: **Standard_D1_V2**
+  - vmSize: set the value to the same Azure VM size you used when you provisioned an Azure VM from the Azure portal
 
-  - ubuntuOSVersion: specify **16.04.0-LTS** or a more recent version if available
+  - ubuntuOSVersion: specify **18.04-LTS** or a more recent version if available
 
   - storageAccountType: **Standard_LRS**
 
