the Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_04.md
+++ b/Instructions/20533D_LAB_AK_04.md
@@ -31,6 +31,8 @@
   - Name: **20533D0401-ilb**
 
   - Type: **Public**
+  
+  - SKU: **Basic**
 
   - Public IP address: click **Choose a public IP address**, on the Choose public IP address blade, click **Create new**, on the **Create public IP address** blade, in the **Name** text box type **20533D0401-ilbfe**, ensure that the **Dynamic** option is selected, and click **OK**.
 
@@ -166,7 +168,7 @@
   
 #### Task 1: Install and configure IIS on Azure VMs by using Windows PowerShell DSC
   
-1. On MIA-CL1, right-click the Windows PowerShell icon and then click **Run ISE as Administrator**. When prompted by User Account Control for confirmation, click **Yes**.
+1. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows PowerShell** folder, right-click **Windows PowerShell ISE**, click **More**, and then click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. In the Windows PowerShell Integrated Scripting Environment (ISE) window, open the **IISInstall.ps1** file located in E:\\Labfiles\\Lab04\\Starter folder.
 
@@ -182,7 +184,7 @@
 
 9. On the **Virtual machines** blade, click ellipsis to the right of the **20533D0401-vm0** entry and click **Connect**.
 
-10. When prompted, click **Save** and then click **Open**.
+10. On the **Connect to virtual machine** blade, click **Download RDP File**. When prompted, click **Open**.
 
 11. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
@@ -322,7 +324,7 @@
 
 2. In the toolbar, click **Connect**.
 
-3. When prompted, click **Save** and then click **Open**. 
+3. On the **Connect to virtual machine** blade, click **Download RDP File**. When prompted, click **Open**.
 
 4. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
@@ -412,7 +414,7 @@
 
 8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-9. In the Azure portal, click **Edit dashboard**.
+9. In the Azure portal, on Dashboard, click **Edit**.
 
 10. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
