the Azure portal interface updates

--- a/Instructions/20533D_LAB_04.md
+++ b/Instructions/20533D_LAB_04.md
@@ -63,6 +63,8 @@ The main tasks for this exercise are as follows:
   - Name: **20533D0401-ilb**
 
   - Type: **Public**
+  
+  - SKU: **Basic**
 
   - Public IP address: create a new IP address named **20533D0401-ilbfe** with dynamically assigned IP address
 
