the Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_05.md
+++ b/Instructions/20533D_LAB_AK_05.md
@@ -11,7 +11,7 @@
 
 3. In the top-left corner of the portal, click **+ Create resource**, and then click **Web**.
 
-4. On the Web + Mobile blade, click **Web App**.
+4. On the New blade, click **Web App**.
 
 5. On the Web App blade, in the **App name** text box, type a unique name. If the name is unique and valid, a green check mark appears.
 
@@ -25,9 +25,9 @@
 
 10. On the New App Service Plan blade, in the **App Service plan** text box, type **20533D0501LabPlan**.
 
-11. In the **Location** drop down list, select an Azure region close to the lab location.
+11. In the **Location** drop down list, select an Azure region close to the lab location, in which you can create app service plans.
 
-12. In **Pricing tier**, select **S1 Standard**, and then click **Select**.
+12. Click **Pricing tier**, next, click **Production**, click **S1 Standard**, and then click **Apply**.
 
 13. On the New App Service Plan blade, click **OK**.
 
@@ -51,7 +51,7 @@
 
 6. In the **Configuration Source** list, accept the default setting and then click **OK**. 
 
-7. On MIA-CL1, right-click the Windows PowerShell icon on the taskbar and click **Run as administrator**. When prompted, in the **User Account Control** dialog box, click **Yes**.
+7. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows PowerShell** folder, right-click **Windows PowerShell**, click **More**, and then click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 8. Sign in to the Azure subscription by typing the following command in the Windows PowerShell window, and then pressing Enter:
 
@@ -114,13 +114,13 @@
 
 2. When prompted whether to open or save the **.PublishSettings** file, click **Save**. Microsoft Edge will save the publishing profile in the **Downloads** folder on your lab computer.
 
-3. On the taskbar, click **Visual Studio**.
+3. On MIA-CL1, click **Start**, in the Start menu, click **Visual Studio 2017**
 
 4. On the **File** menu, click **Open**, and then click **Project/Solution**.
 
-5. Browse to the folder E:\\LabFiles\\Lab05\\Starter\\AdatumWebsite, click **AdatumWebsite.sln**, and then click **Open**. If prompted, in the **Security Warning for AdatumWebsite** dialog box, click **OK**.
+5. Browse to the folder E:\\LabFiles\\Lab05\\Starter\\AdatumWebsite, click **AdatumWebsite.sln**, and then click **Open**. If prompted, in the **Security Warning for AdatumWebsite** dialog box, clear the checkbox **Ask me for every project in this solution** and click **OK**.
 
-6. On the **Debug** menu, click **Start Debugging**. This will open a new tab in the Microsoft Edge window.
+6. In the **Debug** menu, click **Start Debugging**. This will open a new tab in the Microsoft Edge window.
 
 7. On the new Microsoft Edge tab, under **A. Datum Corporation**, click **Learn More**.
 
@@ -137,18 +137,17 @@
 
 3. On the Publish page, click **Create new profile**.
 
-4. In the list of publishing options, click **Import Profile** and then click **OK**. 
+4. In the **Pick a publish target** window, click **Import Profile**. 
 
 5. In the **Import Publish Settings** dialog box, browse to the **Downloads** folder.
 
-6. Select the **.PublishSettings** file that you downloaded in Task 1 of this exercise, click **Open**, and then click **Publish**.
+6. Select the **.PublishSettings** file that you downloaded in Task 1 of this exercise, click **Open**.
 
 7. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in the first exercise and open a new tab in the Microsoft Edge window displaying it.
 
 8. Verify that A. Datum's web app is open in a new Microsoft Edge tab and verify the web app's URL.
 
 9. Close the new Microsoft Edge tab.
-
 
 10. Leave Visual Studio open.
 
@@ -176,23 +175,25 @@
 
 8. Browse to the folder **E:\\LabFiles\\Lab05\\Starter\\NewAdatumWebsite**.
 
-9. Click **AdatumWebsite.sln**, and then click **Open**.
+9. Click **AdatumWebsite.sln**, and then click **Open**. If prompted, in the **Security Warning for AdatumWebsite** dialog box, clear the checkbox **Ask me for every project in this solution** and click **OK**.
 
 10. In Solution Explorer, right-click the **AdatumWebsite** project, and then click **Publish**.
 
-11. In the list of publishing options, click **Import Profile** and then click **OK**.  If **Import Profile** is not listed, you may need to click the right pointing arrow head to display additional publishing options. 
+11. On the Publish page, click **Create new profile**.
 
-12. In the **Import Publish Settings** dialog box, browse to the **Downloads** folder.
+12. In the **Pick a publish target** window, click **Import Profile**. 
 
-13. Select the **.PublishSettings** file that you downloaded in step 5 of this task, click **Open**, and then click **Publish**.
+13. In the **Import Publish Settings** dialog box, browse to the **Downloads** folder.
 
-14. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in the first exercise and open a new tab in the Microsoft Edge window displaying it.
+14. Select the **.PublishSettings** file that you downloaded in step 5 of this task, click **Open**.
 
-15. Verify that A. Datum's web app is open in a new Microsoft Edge tab and verify the web app's URL.
+15. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in the first exercise and open a new tab in the Microsoft Edge window displaying it.
 
-16. Close the new Microsoft Edge tab.
+16. Verify that A. Datum's web app is open in a new Microsoft Edge tab and verify the web app's URL.
 
-17. Leave Visual Studio open.
+17. Close the new Microsoft Edge tab.
+
+18. Leave Visual Studio open.
 
 
 #### Task 2: Swap deployment slots
@@ -253,10 +254,10 @@
 4. Choose an Azure region that is different from the location of the original web app, preferably on another continent. This will become the **`SecondLocation`**. To identify names of Azure regions, at the Windows PowerShell prompt, type the following command, and then press Enter:
 
   ```
-  Get-AzureRmLocation | Select-Object Location
+  ((Get-AzureRmResourceProvider -ProviderNamespace Microsoft.Web).ResourceTypes | Where-Object ResourceTypeName -eq sites).Locations
   ```
 
-5. At the Windows PowerShell prompt, type the following command to create a new resource group, and then press Enter (replace **`SecondLocation`** with the name of the Azure region you chose:
+5. At the Windows PowerShell prompt, type the following command to create a new resource group, and then press Enter (replace **`SecondLocation`** with the name of the Azure region you chose):
 
   ```
   $rg2 = New-AzureRMResourceGroup -Name '20533D0502-LabRG' -Location 'SecondLocation'
@@ -312,12 +313,11 @@
 
 23. Select the **.PublishSettings** file that you downloaded in step 13 of this task, and then click **Open**.
 
-23. Back on the Publish page, click **Publish**. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in the first exercise and open a new tab in the Microsoft Edge window displaying it.
+23. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in this task and open a new tab in the Microsoft Edge window displaying it.
 
 24. Verify that A. Datum's web app is open in a new Microsoft Edge tab and verify the web app's URL.
 
 25. Close the new Microsoft Edge tab.
-
 
 26. Close Visual Studio.
 
@@ -338,7 +338,7 @@
 
 7. In the **Resource Group** section, ensure that **Create new** is selected and, in the text box below, type **20533D0503-LabRG**.
 
-8. In the **Resource group location** drop-down list box, select the Azure region that is closest to the lab location, and then click **Create**. Wait until the Traffic Manager profile is created.
+8. In the **Resource group location** drop-down list box, select the Azure region in which you provisioned the first web app, and then click **Create**. Wait until the Traffic Manager profile is created.
 
 
 
@@ -379,7 +379,7 @@
 
 2. Microsoft Edge displays the Adatum web app. 
 
-3. On MIA-CL1, right-click **Start** and, in the right-click menu, click **Commmand Prompt (Admin)**. When prompted, in the **User Account Control** dialog box, click **Yes**.
+3. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows System** folder, right-click **Command Prompt**, click **More**, and then click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 4. At the Command Prompt, type the following command, replacing **`dnsname`** with the fully qualified DNS name of the Traffic Manager profile, and then press Enter:
 
@@ -430,7 +430,7 @@
 
 8. Start Microsoft Edge, browse to the Azure portal at [**http://portal.azure.com**](http://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-9. In the Azure portal, click **Edit dashboard**.
+9. In the Azure portal, on Dashboard, click **Edit**.
 
 10. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
