the Azure portal interface updates

--- a/Instructions/20533D_LAB_05.md
+++ b/Instructions/20533D_LAB_05.md
@@ -60,7 +60,7 @@ The main tasks for this exercise are as follows:
 
   - Web Hosting Plan Name: **20533D0501LabPlan**
 
-  - Location: an Azure region close to the lab location
+  - Location: an Azure region close to the lab location, in which you can create app service plans.
 
   - Pricing tier: **S1 Standard**
 
@@ -216,7 +216,7 @@ The main tasks for this exercise are as follows:
   
 1. In Azure PowerShell, identify the settings of your test web app by using the **Get-AzureRmWebApp** cmdlet. Note the name of the web app and its location.
 
-2. Choose an Azure region that is different from the location of the original web app, preferably on a different continent. This will become the `SecondLocation`.
+2. Choose an Azure region where you can provision an Azure web apps and which is different from the location of the original web app, preferably on a different continent. This will become the `SecondLocation`.
 
 3. Use the **New-AzureRmResourceGroup** cmdlet to create a new resource group named **20533D0502-LabRG** located in the `SecondLocation`.
 
@@ -252,7 +252,7 @@ The main tasks for this exercise are as follows:
 
   - Resource Group: **20533D0503-LabRG**
 
-  - Resource group location: an Azure region that is closest to the lab location
+  - Resource group location: an Azure region in which you provisioned the first web app
 
 
 #### Task 3: Add endpoints, and configure Traffic Manager
