the Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -9,9 +9,9 @@
 
 2. Start Microsoft Edge, and then browse to [**https://portal.azure.com**](https://portal.azure.com). When prompted, sign in by using the Microsoft account that is the Service Administrator of your Microsoft Azure subscription.
 
-3. In the hub menu, click **+ Create resource**, and then click **Storage**.
+3. In the hub menu, click **+ Create a resource**, and then click **Storage**.
 
-4. On the **Storage** blade, click **Storage account - blob, file, table, queue**.
+4. On the New blade, click **Storage account - blob, file, table, queue**.
 
 5. On the Create storage account blade, apply the following settings, and then click **Create**:
 
@@ -21,9 +21,11 @@
 
   - Account kind: **Storage (general purpose v1)**
 
-  - Performance: **Standard**
+  - Location: the same Azure region that you chose when running the provisioning script at the beginning of this module
 
   - Replication: **Locally-redundant storage (LRS)**
+
+  - Performance: **Standard**
 
   - Secure transfer required: **Disabled**
 
@@ -31,9 +33,7 @@
 
   - Resource group: ensure that **Create new** is selected and, in the textbox below, type **20533D0602-LabRG**.
 
-  - Location: the same Azure region that you chose when running the provisioning script at the beginning of this module
-
-  - Virtual networks (Preview): **Disabled**
+  - Configure virtual networks: **Disabled**
 
   - Pin to dashboard: clear the check box
 
@@ -62,7 +62,7 @@
 
 3. When prompted, click **Save**. Wait until the download completes and then click **Run**. This will automatically launch the setup wizard. Use the wizard to install AzCopy with the default settings. During the setup, when prompted, in the User Account Control dialog box, click **Yes**.
 
-4. On the taskbar, right-click **Windows PowerShell**, and then click **Run ISE as Administrator**. When prompted, in the User Account Control dialog box, click **Yes**.
+4. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows PowerShell** folder, right-click **Windows PowerShell ISE**, click **More**, and then click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 5. In the **Administrator: Windows PowerShell ISE** window, if the script pane is not visible, click **View** and then, in the **View** menu, click **Show Script Pane**.
 
@@ -168,7 +168,7 @@
 
 2. On the **Virtual machines** blade, click ellipsis to the right of the **20533D0601-vm1** entry and click **Connect**.
 
-3. When prompted, click **Save** and then click **Open**.
+3. On the **Connect to virtual machine** blade, click **Download RDP File**. When prompted, click **Open**.
 
 4. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
@@ -196,7 +196,7 @@
 
 14. On the **assets** blade, click **Connect** in the toolbar.
 
-15. On the **Connect** blade, click the **Click to Copy** icon next to the code appearing in the **Connecting from Windows** section. If prompted whether to allow the webpage to access your Clipboard, click **Allow access**.
+15. On the **Connect** blade, click the **Click to Copy** icon next to the top code listing appearing in the **Connecting from Windows** section. If prompted whether to allow the webpage to access your Clipboard, click **Allow access**.
 
 16. Click **Start**, right-click **Windows PowerShell ISE**, in the right-click menu, click **More** and click **Run as administrator**. 
 
@@ -204,24 +204,19 @@
 
 18. In the script pane, paste the content of Clipboard. 
 
-19. In the command line you copied, replace **`[drive letter]`** with **`Z:`** (if it is not already replaced).
+19. Run the script by pressing the F5 key
 
-> **Note**: If your key (password) has a **/** in it, the copy to clipboard will escape this character and replace it with **\\/**.  This will cause the command to fail. Correct the escaped characters or copy the key directly from Azure.
+20. Start File Explorer, click **This PC**, and verify that the command executed successfully, resulting in creation of the **Z:** drive mapping. 
 
-
-20. Run the command by pressing the F5 key
-
-21. Start File Explorer, click **This PC**, and verify that the command executed successfully, resulting in creation of the **Z:** drive mapping. 
-
-22. Back in the Windows PowerShell ISE window, in the console pane, run the following command to view the contents of the invoices folder on the Z: drive, which is now mapped to the assets file share that you created in a previous task:
+21. Back in the Windows PowerShell ISE window, in the console pane, run the following command to view the contents of the invoices folder on the Z: drive, which is now mapped to the assets file share that you created in a previous task:
 
   ```
   Get-ChildItem -Path 'Z:\invoices'
   ```
 
-23. Verify that invoice documents are listed.
+22. Verify that invoice documents are listed.
 
-24. Close the Windows PowerShell ISE window and Internet Explorer, and then sign out of the Remote Desktop session to 20533D0601-vm1.
+23. Close the Windows PowerShell ISE window and Internet Explorer, and then sign out of the Remote Desktop session to 20533D0601-vm1.
 
 > **Result**: At the end of this exercise, you should have created an Azure storage account file share named **assets** that contains a folder named **invoices** with copies of invoice documents. You should have also mapped a drive from an Azure VM to the file share.
 
@@ -380,7 +375,7 @@
 
 8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-9. In the Azure portal, click **Edit dashboard**.
+9. In the Azure portal, on Dashboard, click **Edit**.
 
 10. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
