the Azure portal interface updates

--- a/Instructions/20533D_LAB_06.md
+++ b/Instructions/20533D_LAB_06.md
@@ -55,19 +55,19 @@ The main tasks for this exercise are as follows:
 
   - Account kind: **Storage (general purpose v1)**
 
-  - Performance: **Standard**
+  - Location: the same Azure region that you chose when running the provisioning script at the beginning of this module
 
   - Replication: **Locally-redundant storage (LRS)**
+
+  - Performance: **Standard**
 
   - Secure transfer required: **Disabled**
 
   - Subscription: the name of your Azure subscription
 
-  - Resource group: ensure that **Create new** is selected and, in the textbox below, type **20533D0602-LabRG**
+  - Resource group: ensure that **Create new** is selected and, in the textbox below, type **20533D0602-LabRG**.
 
-  - Location: the same Azure region that you chose when running the provisioning script at the beginning of this module
-
-  - Virtual networks (Preview): **Disabled**
+  - Configure virtual networks: **Disabled**
 
   - Pin to dashboard: clear the check box
 
@@ -170,23 +170,21 @@ The main tasks for this exercise are as follows:
 
 3. Use Internet Explorer to navigate to the Azure portal and, when prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-4. In the Azure portal, navigate to the **assets** file service blade of the storage account that you created in the previous exercise, click **Connect** and copy the `net use` command in the **Connecting from Windows** section that needs to be run in order to connect to the **assets** file share from a Windows computer. 
+4. In the Azure portal, navigate to the **assets** file service blade of the storage account that you created in the previous exercise, click **Connect** and copy the Windows PowerShell script from the **Connecting from Windows** section that needs to be run in order to connect to the **assets** file share from a Windows computer. 
 
-5. In the Remote Desktop session, start Windows PowerShell ISE and paste the `net use` command into the script window. 
+5. In the Remote Desktop session, start Windows PowerShell ISE and paste the script into the script window. 
 
-6. Modify the command you copied so by replacing `[drive letter]` with `Z:`.
+6. In Windows PowerShell ISE, execute the command and verify it completed successfully and created a **Z:** drive mapping. 
 
-7. In Windows PowerShell ISE, execute the command and verify it completed successfully by creating a **Z:** drive mapping. 
-
-8. In the Command Prompt window, enter the following command to view the contents of the invoices folder in drive Z:, which is now mapped to the assets file share that you created in the previous task:
+7. In the Command Prompt window, enter the following command to view the contents of the invoices folder in drive Z:, which is now mapped to the assets file share that you created in the previous task:
 
   ```
   Get-ChildItem -Path 'Z:\invoices'
   ```
 
-9. Verify that invoices are listed.
+8. Verify that invoices are listed.
 
-10. Sign out of the 20533D0601-vm1 VM to end the remote desktop session.
+9. Sign out of the 20533D0601-vm1 VM to end the remote desktop session.
 
 > **Result**: At the end of this exercise, you should have created an Azure storage account file share named **assets** that contains a folder named **invoices** with copies of invoice documents. You should have also mapped a drive from an Azure VM to the Azure storage account file share.
 
